# Ephraim

./: LICENSE  README.md  ephFinetune_exec.py  pyproject.toml
Finetune/: ephFinetune_exec.py  ephFinetune_plan.py
ephraim/: __init__.py  agent_loop.py  background.py  boot.py  commands.py  config.py  conversation.py  history.py  hooks.py  keybindings.py  llm_interface.py  logging_setup.py  main.py  recovery.py  skills.py  state.py  state_manager.py  subagents.py  tasks.py
ephraim.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
ephraim/mcp/: __init__.py  client.py  protocol.py
ephraim/tools/: __init__.py  analysis_tools.py  apply_patch.py  ask_user.py  base.py  ci_tools.py  directory_tools.py  file_operations.py  final_answer.py  git_tools.py  github_tools.py  list_directory.py  mcp_tools.py  multimodal_tools.py  notebook_tools.py  read_file.py  run_command.py  search_tools.py  task_tools.py  test_tools.py  web_tools.py  write_file.py
